update threejs, update src, improve platform class, add direction

--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@ Experiment 01
     <body>
 		<script type="text/javascript" src="http://ajax.googleapis.com/ajax/libs/jquery/1.7/jquery.min.js"></script>
 		<script type="text/javascript" src="js/easing.js"></script>
-        <script type="text/javascript" src="js/Three.js"></script>
+        <script type="text/javascript" src="js/three.min.js"></script>
 		<script type="text/javascript" src="js/RequestAnimationFrame.js"></script>
 		<script type="text/javascript" src="js/Detector.js"></script>
 		<script type="text/javascript" src="js/Stats.js"></script>
