--- a/index.html
+++ b/index.html
@@ -12,7 +12,9 @@ Experiment 01
         <link rel="stylesheet" href="css/style.css" type="text/css" media="screen">
     </head>
     <body>
-		<script type="text/javascript" src="http://ajax.googleapis.com/ajax/libs/jquery/1.7/jquery.min.js"></script>
+		<!--
+		<script type="text/javascript" src="http://ajax.googleapis.com/ajax/libs/jquery/1.7/jquery.min.js"></script> -->
+		<script type="text/javascript" src="js/jquery.min.js"></script> 
 		<script type="text/javascript" src="js/easing.js"></script>
         <script type="text/javascript" src="js/three.min.js"></script>
 		<script type="text/javascript" src="js/RequestAnimationFrame.js"></script>
@@ -20,6 +22,8 @@ Experiment 01
 		<script type="text/javascript" src="js/Stats.js"></script>
 		<script type="text/javascript" src="js/Tween.js"></script>		
 		<script type="text/javascript" src="js/Cube.js"></script>
+		<script type="text/javascript" src="js/experiments01/direction.js"></script>
+		<script type="text/javascript" src="js/experiments01/Tree.js"></script>
 		<script type="text/javascript" src="js/experiments01/Plateform.js"></script>
 		<script type="text/javascript" src="js/main.js"></script>
     </body>
