fix bugs + change camera and add color

--- a/index.html
+++ b/index.html
@@ -24,6 +24,7 @@ Experiment 01
 		<script type="text/javascript" src="js/Cube.js"></script>
 		<script type="text/javascript" src="js/experiments01/direction.js"></script>
 		<script type="text/javascript" src="js/experiments01/Tree.js"></script>
+		<script type="text/javascript" src="js/experiments01/Building.js"></script>
 		<script type="text/javascript" src="js/experiments01/Plateform.js"></script>
 		<script type="text/javascript" src="js/main.js"></script>
     </body>
