--- a/index.html
+++ b/index.html
@@ -20,12 +20,11 @@ Experiment 01
 		<script type="text/javascript" src="js/RequestAnimationFrame.js"></script>
 		<script type="text/javascript" src="js/Detector.js"></script>
 		<script type="text/javascript" src="js/Stats.js"></script>
-		<script type="text/javascript" src="js/Tween.js"></script>		
-		<script type="text/javascript" src="js/Cube.js"></script>
+		<script type="text/javascript" src="js/cube.js"></script>
 		<script type="text/javascript" src="js/experiments01/direction.js"></script>
 		<script type="text/javascript" src="js/experiments01/Tree.js"></script>
-		<script type="text/javascript" src="js/experiments01/Building.js"></script>
-		<script type="text/javascript" src="js/experiments01/Plateform.js"></script>
+		<script type="text/javascript" src="js/experiments01/building.js"></script>
+		<script type="text/javascript" src="js/experiments01/plateform.js"></script>
 		<script type="text/javascript" src="js/main.js"></script>
     </body>
 </html>
